name:                dedup-backup
version:             0.1.0.0
synopsis:            Deduplicating backup utility.
-- description:         
homepage:            https://github.com/zenhack/dedup-backup
license:             GPL-3
license-file:        LICENSE
author:              Ian Denhardt
maintainer:          ian@zenhack.net
-- copyright:           
category:            System
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable dedup-backup
  main-is:             src/Main.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.7 && <4.8,
                       base16-bytestring,
                       bytestring,
                       cryptohash,
                       directory,
                       unix
  -- hs-source-dirs:      
  default-language:    Haskell2010
