name:                dedup-backup
version:             0.1.0.0
synopsis:            Deduplicating backup utility.
-- description:
homepage:            https://github.com/zenhack/dedup-backup
license:             GPL-3
license-file:        LICENSE
author:              Ian Denhardt
maintainer:          ian@zenhack.net
-- copyright:
category:            System
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable dedup-backup
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.7 && <5.0,
                       containers,
                       base16-bytestring,
                       bytestring,
                       cryptohash,
                       directory,
                       unix
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite the-test-suite
  type: exitcode-stdio-1.0
  main-is: TestMain.hs
  build-depends:       base >=4.7 && <5.0,
                       containers,
                       base16-bytestring,
                       bytestring,
                       cryptohash,
                       directory,
                       unix,
                       Unixutils,

                      QuickCheck,
                      test-framework,
                      test-framework-quickcheck2
  hs-source-dirs:     tests, src
  default-language:    Haskell2010
